1. Collection API Улучшения[#170157]